# MCP-AuditGuard

./: .gitignore  Agent.md  pyproject.toml
cli/: __init__.py  scan.py
core/: __init__.py  baseline_store.py  config_loader.py  diff_engine.py  models.py  redaction.py  scanner.py  tool_collector.py
detectors/: __init__.py
detectors/obfuscation/: __init__.py  common.py  encoded_payload.py  homoglyph.py  html_comment.py  unicode_obfuscation.py
detectors/tool_poisoning/: __init__.py  cross_tool_instruction.py  hidden_instruction.py  markdown_hidden_link.py  metadata_poisoning.py  schema_poisoning.py
docs/: attack-scenarios.md  member3-obfuscation-notes.md
reports/: json_report.py  markdown_report.py
rules/: suspicious_phrases.yaml  tool_poisoning.yaml
tests/fixtures/: benign_tools.json  malicious_tools.json
tests/integration/: test_cli_scan.py  test_scan_vulnerable_lab.py
tests/unit/: test_baseline_store.py  test_config_loader.py  test_diff_engine.py  test_encoded_payload.py  test_json_report.py  test_markdown_report.py  test_obfuscation.py  test_redaction.py  test_scanner.py  test_tool_collector.py  test_tool_poisoning.py
vulnerable-lab/01-hidden-description/: tools.json  tools.json.txt
vulnerable-lab/02-Schema Poisoning/: tools.json.txt
vulnerable-lab/02-schema-poisoning/: tools.json
vulnerable-lab/03-Base64 Instruction/: tools.json.txt
vulnerable-lab/03-base64-instruction/: tools.json
vulnerable-lab/04-Zero-width/: tools.json.txt
vulnerable-lab/04-zero-width-obfuscation/: tools.json
vulnerable-lab/05-Rug Pull/: tools-after.json.txt  (+1 more)
(+4 files in other folders)
