[project]
name = "mcp-tpguard"
version = "0.1.0"
description = "MCP Tool Poisoning detection and tool metadata integrity scanner"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
